Updated swagger yaml and controllers based on API,
